--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   app:
     build: .
-    container_name: rentalx
+    container_name: rentx
     restart: always
     ports:
       - 3333:3333
