--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,29 @@
 version: "3.9"
 services:
+  database:
+    image: postgres
+    container_name: postgres_ignite
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=rentx
+    volumes:
+      - pgdata:/data/postgres
   app:
     build: .
     container_name: rentx
-    restart: always
     ports:
       - 3333:3333
     volumes:
       - .:/usr/app
+    links:
+      - postgres_ignite
+    depends_on:
+      - postgres_ignite
+
+volumes:
+  pgdata:
+    driver: local
