--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "3.7"
+version: "3.9"
 services:
   app:
     build: .
     container_name: rentalx
+    restart: always
     ports:
       - 3333:3333
     volumes:
