--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Elioenay Silva",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn --poll --interval 1000 src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
