--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,7 @@
   "host": "localhost",
   "username": "postgres",
   "password": "password",
-  "database": "rentx"
+  "database": "rentx",
+  "migrations": ["./src/database/migrations/*.ts"],
+  "cli": { "migrationsDir": "./src/database/migrations" }
 }
