--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Elioenay Silva",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn --poll --interval 1000 src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn --poll --interval 1000 src/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
     "test": "jest"
   },
   "devDependencies": {
@@ -30,6 +30,7 @@
     "prettier": "^2.2.1",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.10.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
