--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
       "@modules/*": ["modules/*"],
       "@config/*": ["config/*"],
       "@shared/*": ["shared/*"],
-      "@utils/*": ["utils/*"],
-      "@errors/*": ["errors/*"]
+      "@utils/*": ["utils/*"]
     },
     "esModuleInterop": true,
     "experimentalDecorators": true,
