--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,13 @@ services:
     container_name: rentx
     ports:
       - 3333:3333
+      - 9229:9229
     volumes:
       - .:/usr/app
     links:
-      - postgres_ignite
+      - database
     depends_on:
-      - postgres_ignite
+      - database
 
 volumes:
   pgdata:
