Corrigindo docker-compose arquivo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,8 @@ services:
       - 3333:3333
       - 9229:9229
     volumes:
-      - .:/usr/app
-    links:
-      - database
+      - .:/home/app
+      - /home/app/node_modules
     depends_on:
       - database
 
